--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+spring.jpa.hibernate.ddl-auto=update
+
 
 #hibernate ddl auto(create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto= create
+#spring.jpa.hibernate.ddl-auto= create
