--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,21 @@
-#database configs
+##database configs
+#server.port= 8090
+#spring.datasource.url=jdbc:postgresql://postgres-db:5432/SendSMS
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#
+#
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#
+#spring.jpa.hibernate.ddl-auto=update
+#
+##hibernate ddl auto(create, create-drop, validate, update)
+##spring.jpa.hibernate.ddl-auto= create
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/SendSMS
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
 
-
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password= ${DATABASE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
-
-
-#hibernate ddl auto(create, create-drop, validate, update)
-#spring.jpa.hibernate.ddl-auto= create
