--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,8 @@
 ##hibernate ddl auto(create, create-drop, validate, update)
 ##spring.jpa.hibernate.ddl-auto= create
 
-
+spring.config.import=optional:classpath:/additional-config.properties
+spring.profiles.active=qa
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password= ${DATABASE_PASSWORD}
